--- a/src/app/views/authentication/authentication.component.html
+++ b/src/app/views/authentication/authentication.component.html
@@ -4,5 +4,6 @@
   </mat-card-header>
   <mat-card-actions>
     <button mat-raised-button (click)="loginGoogle()">Sign in with Google</button>
+    <button mat-raised-button (click)="loginPhone()">Sign in with Phone</button>
   </mat-card-actions>
 </mat-card>
