--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -2,7 +2,7 @@
   <mat-toolbar-row>
     <span>Lunch change</span>
     <div _ngcontent-c1="" class="flex-spacer"></div>
-    <button mat-icon-button routerLink="/lunches"><mat-icon>view_list</mat-icon></button>
+    <button mat-icon-button routerLink="/"><mat-icon>view_list</mat-icon></button>
     <mat-divider [vertical]="true"></mat-divider>
     <button mat-icon-button routerLink="/add-lunch"><mat-icon>add_box</mat-icon></button>
     <mat-divider [vertical]="true"></mat-divider>
