--- a/src/app/views/lunches/lunches.component.html
+++ b/src/app/views/lunches/lunches.component.html
@@ -1,6 +1,9 @@
-<p>
-  lunches :
-</p>
-<ul>
-  <li *ngFor="let lunch of lunchesObservable| async as lunches;" >{{lunch.description}}</li>
-</ul>
+<mat-list>
+  <mat-list-item *ngFor="let lunch of lunchesObservable| async as lunches;" >
+    <!--<img matListAvatar src="..." alt="...">-->
+    <h3 matLine> {{lunch.title}} </h3>
+    <p matLine>
+      <span> {{lunch.description}} </span>
+    </p>
+  </mat-list-item>
+</mat-list>
